--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
     <meta property="og:description" content="Learn Russian with heart. Interactive flashcards and AI-powered cultural assistance.">
     <meta property="og:image" content="https://fonts.gstatic.com/s/i/short-term/release/googletest/face/default/24px.svg">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Babushka - Russian Language Trainer">
-    <meta property="twitter:description" content="Learn Russian with heart. Interactive flashcards and AI-powered cultural assistance.">
-
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +35,7 @@
         .matryoshka-gradient {
             background: linear-gradient(135deg, #e63946 0%, #d62828 100%);
         }
-        /* Custom scrollbar for a cleaner look */
+        /* Custom scrollbar */
         ::-webkit-scrollbar {
             width: 6px;
         }
@@ -58,12 +53,12 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
